# nrql-js

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: convert.rs  lib.rs  napi_ast.rs
test/: parse.test.mjs
