[package]
name = "nrql_js"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nom_nrql = "0.1.0"
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
